# RandomChat

./: .env  .gitignore  README.md  main.py  pyproject.toml  run.sh  test.sh  test_simple.py
.github/: commit_template.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
app/: main.py
app/apis/users/: models.py  router.py  schemas.py
app/core/: config.py
app/dtos/: auth.py
app/models/: user.py
migrations/models/: 0_20251130180448_init.py  0_20251214055357_init.py  1_20251214055752_create_user_table.py
