[project]
name = "fastapiproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "black>=25.11.0",
    "coverage>=7.12.0",
    "fastapi>=0.122.0",
    "isort>=7.0.0",
    "mypy>=1.18.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
